--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
-// package.json
 {
   "name": "mwikipsvapp",
   "version": "1.0.0",
   "description": "Mwiki Sacco Web App",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
