--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "mwikipsvapp",
+  "name": "vehicle-app",
   "version": "1.0.0",
-  "description": "Mwiki Sacco Web App",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2"
-  },
-  "engines": {
-    "node": ">=18"
+    "express": "^4.19.2",
+    "bcryptjs": "^2.4.3"
   }
 }
