--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vehicle-app",
+  "name": "mwikiapp",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
   "type": "commonjs",
   "scripts": {
     "start": "node server.js"
