--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5"
   }
 }
